0.65
-  tag headers to give doxygen API documentation
-  cd-info/cd-read now can specify library level of output

0.64
-  add routines to return a list of devices or scan a list of devices
   which satisfy any/all things in a capability mask. Should be useful
   for plugins that want to find a CD-DA to play or find a plugin that handles
   a particular device. 
-  cd-read: new program to help diagnose reading problems.
-  cd-info: now displays date on iso9660 listing and translates filename 
   to normal conventions, gives track "green" info
-  Add/expose routines to get/set time. time is reported back in entry
   stat. Routines to create ISO-9660 directories and entries must now
   supply the time to set on the entry.
-  Darwin and FreeBSD drivers closer to having native CD support, MinGW
   fixes (but not complete either)
-  BSDI fixes
-  Document more functions.

0.63
-  create libiso9660 library and install that.
-  More sample programs.
-  add library routine cdio_guess_cd_type to analyze/guess what type of 
   CD or CD image we've got.
-  cd-info can list the files of a ISO-9660 filesystem via libiso9660 
   with option --iso9660

0.62
-  Some minimal documentation. More will follow.
-  Add a simple sample programs.
-  Add a simple regression test driver.
-  "Smart" open was scanning devices rather than devices + image drivers.

0.61
-   Cygwin/MinGW port.
-   get-default-device reworked to be smarter about finding devices.
-   cd-info: add --no-headers. version ID is from package now. Show default
            device on "--version" output.
-   API: add routine report if string refers to a device or not
-   Make use of features in libcddb 0.9.4.
0.6
-   Bug: eject wouldn't.
-   If given .bin find corresponding .cue. If no cue, complain.
0.5
-  Add RPM spec file. Thanks to Manfred Tremmel <Manfred.Tremmel@iiv.de>
-  cdinfo renamed to cd-info to avoid conflicts with other existing programs
-  bug in ejecting CD's fixed
-  find cue file if given bin. 